# LDetect-lite

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: README.md  bench_bitpacked_full_genome.py  bench_ld_kernel.py
docs/: exactness.md  optimizations.md  pipeline-steps.md
examples/: chr2.py
examples/MacDonald2022/: Snakefile  Snakefile.priority5_profiling  config.yaml  priority5_profiling.yaml
examples/MacDonald2022/scripts/: compare_blocks.py  compare_boundaries.py  compare_legacy_stage_outputs.py  compare_maps.py  compare_vcf_map_positions.py  convert_decode_map.py  convert_pyrho_map.py  diagnose_boundaries.py  download_data.py  plot_ld_neighborhood_genomewide.py  plot_ld_neighborhood_separation.py  postprocess.py  prep_individuals.py  run_legacy_from_vcf.py  sync_results.sh  validate_maps.py  verify_local_search.py
examples/ldetect_example/: README.md  Snakefile  config.yaml
examples/ldetect_example/scripts/: benchmark_functions.py  benchmark_legacy_covariance.py  benchmark_legacy_pipeline.py  compare_bed.py  compare_bpoints.py  compare_covariance.py  compare_partitions.py  compare_vector.py  convert_covariance.py  prepare_1000g_region.py  profile_bitpack_ingestion.py
examples/ldetect_original/: README.md  Snakefile  Snakefile.alternate_source_rerun  Snakefile.compression_diagnostics  Snakefile.cyvcf2_migration_profiling  Snakefile.diagnostics  Snakefile.ld_kernel_diagnostics  Snakefile.legacy_diagnostics  Snakefile.priority5_profiling  Snakefile.provenance_diagnostics  Snakefile.signal_cache_diagnostics  Snakefile.sv_boundary_diagnostics  alternate_source_rerun.yaml  compression_diagnostics.yaml  config.yaml  cyvcf2_migration_profiling.yaml  diagnostics.yaml  ld_kernel_diagnostics.yaml  legacy_diagnostics.yaml  priority5_profiling.yaml  provenance_diagnostics.yaml  signal_cache_diagnostics.yaml  sv_boundary_diagnostics.yaml
examples/ldetect_original/plots/: EUR-chr21.csv
examples/ldetect_original/scripts/: audit_boundary_spanning_variants.py  benchmark_eur_chr2.py  benchmark_eur_chr21.py  check_reference_beds.py  combine_tsv.py  compare_blocks.py  compare_compression.py  compare_cyvcf2_migration.py  compare_ld_kernel.py  compare_legacy_outputs.py  compare_partition_overlap_duplicates.py  compare_priority5_mode.py  compare_signal_cache.py  compare_sv_attributes.py  compare_vcf_ld.py  compare_vcf_positions.py  diagnose_inputs.py  diagnose_run.py  download_legacy_example_data.py  download_provenance_input.py  legacy_hdf5_to_gz.py  plot_profile_timeline.py  plot_resource_scaling.py  plot_vector_boundaries.py  prep_individuals.py  profile_ldetect2.py  profile_run.py  run_legacy_ldetect.py  run_provenance_position_diagnostics.py  runtime_benchmark.py  snp_filter_diagnostics.py
examples/r2_zarr_exactness/: README.md  Snakefile  config.yaml
examples/r2_zarr_exactness/scripts/: compare_run_modes.py
notes/: README.md  covariance-streaming-cache-implementation-note.md  dosage-cache.md  implementation-plan.md  ldetect-original-concordance.md  ldetect-original-fp64-concordance.md  ldetect-original-handoff.md  ldetect-original-main-pipeline-audit.md  ldetect_optimization_findings.md  local-search-divergence-asn22.md  local-search-memory-speed-handoff.md  macdonald2022-boundary-diagnostics.md  macdonald2022-interpolation-port.md  macdonald2022-pyrho-handoff.md  nocache-optimization-findings.md  optimizations-handoff.md  optimizations.md  post-covariance-optimization-review.md  r2-zarr-cache-optimization-plan.md  tiled-vectorized-r2.md
notes/findings/: bitpacked-ld-kernel.md  ldetect-example-benchmarks.md  ldetect-original-reproduction.md  macdonald2022-reproduction.md  multicore-utilization.md
notes/logs/: bitpacked-ld-kernel.md  covariance-bitpacked-kernel-and-chromosome-mode.md  covariance-cache-redesign-plan.md  implementation-plan.md  ldetect-example-benchmarking.md  ldetect-original-main-pipeline-audit.md  local-search-divergence-asn22.md  macdonald2022-boundary-diagnostics.md  macdonald2022-interpolation-port.md  macdonald2022-pyrho-handoff.md  multicore-utilization-filter-width-search.md  post-covariance-optimization-review.md  sv-boundary-diagnostics-investigation.md
schematics/: README.md  plot_figure1_panels.py  plot_pipeline_schematics.py
src/ldetect2/: __init__.py  filters.py  find_minima.py  interpolate_maps.py  local_search.py  matrix_analysis.py  metric.py  pipeline.py  shrinkage.py
src/ldetect2/_cli/: cmd_covariance.py  cmd_covariance_summary.py  cmd_extract_bpoints.py  cmd_find_minima.py  cmd_interpolate_maps.py  cmd_matrix_to_vector.py  cmd_partition.py  cmd_run.py  main.py
src/ldetect2/_util/: binary_search.py  covariance_array.py  covariance_summary.py  ld_kernel_variants.py  logging.py  memory.py  run.py  vector_array.py
src/ldetect2/io/: bed.py  covariance.py  covariance_hdf5.py  partitions.py  r2_nocache.py  r2_zarr.py  signal_hdf5.py  vcf.py
src/ldetect_lite/: __init__.py  filters.py  find_minima.py  interpolate_maps.py  local_search.py  matrix_analysis.py  metric.py  pipeline.py  shrinkage.py
tests/: _partition_fixtures.py  conftest.py  test_banded_metric_coverage.py  test_bed.py  test_binary_search.py  test_cmd_covariance.py  test_cmd_find_minima.py  test_cmd_matrix_to_vector.py  test_cmd_run.py  test_cmd_run_fused_vector.py  test_compact_schema_v2.py  test_compare_compression_script.py  test_compare_signal_cache_script.py  test_covariance_array.py  test_covariance_io.py  test_covariance_sidecars.py  test_covariance_summary.py  test_diagnose_run.py  test_duplicate_overlap_integration.py  test_filters.py  test_find_minima.py  test_interpolate_maps.py  test_intervals.py  test_ld_kernel_variants.py  test_local_search.py  test_local_search_vcf_recompute.py  test_macdonald_diagnose_boundaries.py  test_macdonald_validate_maps.py  test_metric.py  test_partitions.py  test_profile_ldetect2.py  test_r2_zarr.py  test_r2_zarr_exactness_compare.py  test_shrinkage.py  test_signal_hdf5.py  test_vcf.py  test_vcf_backend_timing.py
tests/integration/: test_pipeline.py
(+31 files in other folders)
