[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ldetect2"
version = "0.1.0"
description = "Fast calculation of approximately independent LD blocks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Adam He" }]
keywords = ["bioinformatics", "LD", "linkage-disequilibrium", "GWAS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy>=1.24", "scipy>=1.10", "numba>=0.57", "h5py>=3.10"]

[project.optional-dependencies]
heatmap = ["matplotlib>=3.7"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "snakemake>=8.0",
    "snakemake-executor-plugin-slurm",
    "pyyaml>=6.0",
]

[project.scripts]
ldetect2 = "ldetect2._cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ldetect2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: slow end-to-end tests against example data (deselect with -m 'not integration')",
]

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

# None of these ship inline types or stubs (numba/h5py have no py.typed
# marker; scipy.ndimage/scipy.signal stubs are incomplete upstream).
[[tool.mypy.overrides]]
module = ["scipy.*", "numba.*", "h5py.*"]
ignore_missing_imports = true

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.1.0"]
