[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ldetect-lite"
version = "0.2.2"
description = "Fast calculation of approximately independent LD blocks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Adam He" }]
keywords = ["bioinformatics", "LD", "linkage-disequilibrium", "GWAS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "numba>=0.57",
    "h5py>=3.10",
    "hdf5plugin>=4.4",
    "cyvcf2>=0.31",
]

[project.urls]
Homepage = "https://github.com/adamyhe/ldetect-lite"
Repository = "https://github.com/adamyhe/ldetect-lite"
Issues = "https://github.com/adamyhe/ldetect-lite/issues"
Changelog = "https://github.com/adamyhe/ldetect-lite/releases"

[project.optional-dependencies]
heatmap = ["matplotlib>=3.7"]
profiling = ["psutil>=5.9"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "snakemake>=8.0",
    "snakemake-executor-plugin-slurm",
    "pyyaml>=6.0",
]

[project.scripts]
ldetect-lite = "ldetect_lite._cli.main:main"
ldetect = "ldetect_lite._cli.main:main"
ldl = "ldetect_lite._cli.main:main"

[tool.hatch.build]
exclude = [
    "/_reference",
    "/benchmarks",
    "/docs",
    "/examples",
    "/notes",
    "/tests",
    "/.agents",
    "/.claude",
    "/.codex",
    "/.github",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.uv-cache",
    "/.gitattributes",
    "/.gitignore",
    "/AGENTS.md",
    "/uv.lock",
    "/**/__pycache__",
    "/**/.mypy_cache",
    "/**/.snakemake",
    "/**/results",
    "/**/work",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ldetect_lite"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: slow end-to-end tests against example data (deselect with -m 'not integration')",
]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

# None of these ship inline types or stubs (numba/h5py/hdf5plugin/cyvcf2 have
# no py.typed marker; scipy.ndimage/scipy.signal stubs are incomplete upstream).
[[tool.mypy.overrides]]
module = ["scipy.*", "numba.*", "h5py.*", "hdf5plugin.*", "cyvcf2.*"]
ignore_missing_imports = true
